# src/server_gen/ratbag_emu_server/controllers/device_controller_gen.py
@@ -6,13 +6,15 @@ from ratbag_emu_server.models.event_data import EventData  # noqa: E501
 from ratbag_emu_server import util
 
 
-def add_device():  # noqa: E501
+def add_device(shortname):  # noqa: E501
     """Creates a simulated device
 
     Tells ratbag-emu to create a new simulated device # noqa: E501
 
+    :param shortname: Short name name of the device to add
+    :type shortname: str
 
-    :rtype: List[Device]
+    :rtype: None
     """
     return 'do some magic!'
 
@@ -23,7 +25,7 @@ def device_event(device_id, event_data):  # noqa: E501
     Send raw HID event data to the target device # noqa: E501
 
     :param device_id: ID of the device to return
-    :type device_id: int
+    :type device_id: List[int]
     :param event_data: Event data
     :type event_data: dict | bytes
 
